@@ -87,7 +87,7 @@ module ActiveResource
     def from_xml(xml)
       clear
       humanized_attributes = @base.attributes.keys.inject({}) { |h, attr_name| h.update(attr_name.humanize => attr_name) }
-      messages = Hash.create_from_xml(xml)['errors']['error'] rescue []
+      messages = Hash.from_xml(xml)['errors']['error'] rescue []
       messages.each do |message|
         attr_message = humanized_attributes.keys.detect do |attr_name|
           if message[0, attr_name.size + 1] == "#{attr_name} "
